# Keyboard-ReLay

./: .gitignore  README.md  notes.md
app/: Makefile  QES.md  README.md  info.md  keyboard_relay  mapping.json  saves.txt
app/config/: Makefile  defaultMapping.json  keys.json  mapping.json  remaps.json
app/daemon/: Makefile  README.md  info.md  saves.txt
app/daemon/config/: my_remaps.json
app/daemon/header/: constants.h  eventQueue.h  initData.h  main.h  relayEventHandler.h
app/daemon/src/: eventQueue.c  main.c  (+2 more)
app/gui/: README.md
app/header/: constants.h  converter.h  data.h  dataStorage.h  eventHandler.h  eventQueue.h  keyHandler.h  main.h  quartzEventService.h  quartzEventSystem.h  queue.h  relayEventHandler.h  storeData.h
app/src/: converter.c  data.c  dataStorage.c  eventHandler.c  eventQueue.c  keyHandler.c  keyInfo.h  main.c  mapping.json  quartzEventService.c  queue.c  relayEventHandler.c  storeData.c
desktop/daemon/: Makefile  README.md
program/: Cargo.toml  Makefile  keyboard_relay  saves.txt
program/src/: eventhandler.rs  evhandler.rs  main.rs  remap.rs  remaps.json
program/src/mac/: quartzEventService.c
program/src/os_specific/: macos.rs  mod.rs
website/: README.md  index.html  package-lock.json  package.json  relay_keymap.json  script.js  styles.css  vite.config.ts
website/scripts/: codes.js  jsonEditor.js  mappingData.js  script.js
website/src/: App.tsx  styles.css  types.ts
website/styles/: codeEditor.css  styles.css
website_old/: styles.css
website_v1/: index.html  relay_keymap.json  relay_keymap_unsure.txt  script.js
(+83 files in other folders)
