[package]
name = "program"
version = "0.1.0"
edition = "2024"

[dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
core-graphics = "0.25.0"
once_cell = "1.21.3"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
serde_json = "1.0.142"

[features]
unstable_grab = ["rdev/unstable_grab"]
